# cs2640_project_2026Spring

./: .gitignore  ATTACK_PLAN.md  CMakeLists.txt  README.md  build_slides.py  src.md
.github/ISSUE_TEMPLATE/: bug_report.md  cleanup_request.md  feature_request.md
.github/workflows/: build.yml  code-quality.yml  npm-release.yml  pypi-release.yml  python.yml  scorecard.yml
AaditSaluja/: .gitignore  README.md  ai-usage.md
AaditSaluja/report/: Makefile  README.md  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  refs.bib
AaditSaluja/src/: docker-compose.cephfs.yml
AengusMcGuinness/: README.md  ai-usage.md
AengusMcGuinness/report/: final_report.tex
AengusMcGuinness/src/: .gitignore  CMakeLists.txt  Doxyfile  profile.py
AengusMcGuinness/src/benchmarks/: kv_benchmark.cpp
AengusMcGuinness/src/docs/: doxygen_main.md
AengusMcGuinness/src/include/kvstore/: kv_store.hpp  rdma_store.hpp
AengusMcGuinness/src/include/net/: event_loop.hpp  rdma_context.hpp  socket_utils.hpp
AengusMcGuinness/src/include/protocol/: text_protocol.hpp
AengusMcGuinness/src/scripts/: download_cluster_results.sh  experiment_cpu.sh  measure_cpu.py  metrics_client.py  metrics_collector.py  plot_all_results.sh  plot_benchmark.py  plot_comparison.py  plot_cpu.py  plot_final_trials.py  plot_network.py  run_one_sided_rdma_experiments.sh  run_tcp_experiments.sh  run_two_sided_rdma_experiments.sh
AengusMcGuinness/src/src/client/: main.cpp  rdma_client.cpp
AengusMcGuinness/src/src/kvstore/: kv_store.cpp  rdma_store.cpp
AengusMcGuinness/src/src/net/: event_loop.cpp  rdma_context.cpp  socket_utils.cpp
AengusMcGuinness/src/src/protocol/: text_protocol.cpp
AengusMcGuinness/src/src/server/: main.cpp  rdma_main.cpp
AengusMcGuinness/src/tests/: kv_store_concurrency_test.cpp  kv_store_test.cpp  protocol_test.cpp
ColeHarten/: README.md  ai-usage.md
HowardHuang/: README.md  ai-usage.md
HowardHuang/presentation/: cs2640_final_project_presentation.pptx
JoshuaGillett/: README.md  ai-usage.md
JoshuaGillett/report/: main.tex  refs.bib  usenix.sty
LauYeeYu/: README.md
LauYeeYu/report/: report.tex
Minkai25/: README.md
Minkai25/report/: final_report.tex
Minkai25/src/: CS2640_LearnedCaching.pptx  README_PROJECT.md  ai-usage.md
Nickanda/: README.md  pyproject.toml  requirements.txt
Nickanda/docs/: experiment_availability.csv  experiment_latencies.csv  experiment_results.csv
Nickanda/proto/: kvstore.proto
Nickanda/scripts/: gen_proto.sh  plot_results.py  run_experiments.py  run_three_nodes.sh
Nickanda/src/kvstore/: cli_client.py  config.py  fault.py  harness.py  metrics.py  models.py  node_main.py  rpc_client.py  service.py  store.py
Nickanda/src/kvstore/replication/: __init__.py  anti_entropy.py  base.py  leader.py  quorum.py
Nickanda/src/kvstore/storage/: __init__.py  base.py  faulty_wrapper.py  memory_backend.py  sqlite_backend.py
Nickanda/src/kvstore/versioning/: __init__.py  base.py  compare.py  lamport.py  vector_clock.py
Nickanda/src/tests/: _cluster.py  conftest.py  test_anti_entropy.py  test_basic_replication.py  test_crash_recovery.py  test_faulty_wrapper.py  test_leader_replication.py  test_quorum_replication.py  test_read_repair.py  test_storage_backends.py  test_versioning.py
Spenserrrr/: README.md  ai-usage.md
data/: cloudPhysicsIO.vscsi.lcs
doc/: advanced_lib.md  advanced_lib_extend.md  install.md  quickstart_plugin.md
example/cacheCluster/: CMakeLists.txt
example/plugin_v2/: CMakeLists.txt  README.md  plugin_lru.cpp
jdabtieu/: .gitignore  ai-usage.md
jdabtieu/report/: sample.bib  usenix.tex
jdabtieu/src/: fsbench_run.sh  fsbench_setup.sh  log.txt  plot_all_archives.sh  setup.env
kit-wang/: README.md  ai-usage.md
kit-wang/report/: references.bib  usenix2019_v3.1.tex
libCacheSim-node/: README.md  binding.cc  binding.gyp  cli.js  index.js  libCacheSim-node.md  package.json  test.js
libCacheSim-python/: README.md  pyproject.toml
libCacheSim-python/examples/: README.md  demo_unified_interface.py  python_hook_cache_example.py  stream_request_example.py  zipf_trace_example.py
libCacheSim-python/libcachesim/: __init__.py  __init__.pyi  eviction.py  trace_generator.py
libCacheSim-python/src/: pylibcachesim.cpp
libCacheSim-python/tests/: conftest.py  test_eviction.py  test_process_trace.py  test_python_hook_cache.py  test_trace_generator.py  test_unified_interface.py  utils.py
libCacheSim/cache/: CMakeLists.txt  cache.c  (+1 more)
libCacheSim/mrcProfiler/: CMakeLists.txt  mrcProfiler.cpp  mrcProfiler.h
libCacheSim/profiler/: CMakeLists.txt  simulator.c
libCacheSim/traceAnalyzer/: CMakeLists.txt  accessPattern.h  analyzer.cpp  op.h  popularity.cpp  popularity.h  popularityDecay.h  reqRate.h  reuse.h  size.h  ttl.h
libCacheSim/traceAnalyzer/utils/: threadPool.cpp
libCacheSim/traceAnalyzer/utils/include/: threadPool.h  utilsStr.h
libCacheSim/traceReader/: CMakeLists.txt  reader.c
libCacheSim/traceReader/customizedReader/: lcs.c  twrBin.h  twrNSBin.h  valpinBin.h
libCacheSim/traceReader/customizedReader/oracle/: oracleTwrBin.h  oracleTwrNSBin.h
libCacheSim/traceReader/generalReader/: csv.c  zstdReader.c
libCacheSim/traceReader/sampling/: SHARD.c  spatial.c
libCacheSim/utils/: CMakeLists.txt  mystr.c
libCacheSim/utils/include/: mystr.h
mirabor/: .gitignore  README.md  ai-usage.md
modal_app/: patch_lmcache.py  run_experiments.py  serve.py
mpershyna/: README.md  report.tex
plugins/: cacheus.py  run_experiments.py  s3fifo.py  sweep14.py
scripts/: build_pypi.sh  debug.sh  install_dependency.sh  install_dev_dependency.sh  install_libcachesim.sh  install_python.sh  setup_hooks.sh  sync_node_version.py
tdepodesta/: README.md  ai-usage.md  src.txt
test/: CMakeLists.txt  common.h  test_admissionAlgo.c  test_dataStructure.c  test_evictionAlgo.c  test_mrcProfiler.cpp  test_prefetchAlgo.c  test_traceReader.c
valerie-chen/: README.md  ai-usage.md
waseemahmad1/: README.md  ai-usage.md
wolfiej-k/: README.md
xuanlinjiang/: README.md
yunjia_zheng/: ai-usage.md
zani_xu/: README.md  ai-usage.md
(+1546 files in other folders)
