[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2640-kvstore"
version = "0.1.0"
description = "Mini replicated KV/Blob store for consistency vs performance experiments"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
