[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "libcachesim"
version = "0.3.1"
description="Python bindings for libCacheSim"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest"]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
  "error",
  "ignore::pytest.PytestCacheWarning",
]
testpaths = ["tests"]


[tool.cibuildwheel]
build-frontend = "build"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64"
# Only build for x86_64 architectures
build = "*-manylinux_x86_64"
# Install build dependencies using dnf. This runs once per container.
before-all = "dnf install -y ninja-build cmake libzstd-devel glib2-devel"
# We add 'rm -rf build' to ensure a clean build inside the container.
# The C++ core is built first, then the wheel build will use it.
# Use absolute paths to avoid issues with the working directory.
before-build = "rm -rf /project/build && cmake -S /project -B /project/build -G Ninja && cmake --build /project/build"
# Set the environment variable for the wheel build step.
environment = { LCS_BUILD_DIR = "/project/build" }
# test-requires = "pytest"
# test-command = "pytest {project}/tests"

# [tool.cibuildwheel.pyodide]
# build-frontend = {name = "build", args = ["--exports", "whole_archive"]}

[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "NPY",         # NumPy specific rules
  "PD",          # pandas-vet
]
ignore = [
  "PLR09",    # Too many X
  "PLR2004",  # Magic comparison
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
